[gd_scene load_steps=37 format=4 uid="uid://dnf1maggh8aud"]

[ext_resource type="Texture2D" uid="uid://tvjurqrswyqt" path="res://assets/sprites/Neko Cafe Asset Pack/neko-cafe-tilemap.png" id="1_0euih"]
[ext_resource type="Script" uid="uid://b761jspfqpt6y" path="res://scripts/cat_cafe_shop.gd" id="1_0ngef"]
[ext_resource type="Texture2D" uid="uid://y1eojpamdieg" path="res://assets/sprites/Neko Cafe Asset Pack/neko-cafe-furnitures.png" id="2_e5pj7"]
[ext_resource type="Texture2D" uid="uid://dl0o2rvh603rk" path="res://assets/sprites/Neko Cafe Asset Pack/neko-cafe-food.png" id="3_au171"]
[ext_resource type="Texture2D" uid="uid://cflamapmgemgx" path="res://assets/sprites/Neko Cafe Asset Pack/Characters/cat-waiter-front.png" id="4_au171"]
[ext_resource type="Texture2D" uid="uid://uen0ubkf3hoy" path="res://assets/sprites/Neko Cafe Asset Pack/Characters/cat-orange-side.png" id="4_e5pj7"]
[ext_resource type="PackedScene" uid="uid://b8ws2on6iccdx" path="res://scenes/entities/TopDownPlayer.tscn" id="6_kog1c"]
[ext_resource type="Script" uid="uid://bvbuu1gllqxhg" path="res://scripts/top_down_door.gd" id="7_0ngef"]
[ext_resource type="Script" uid="uid://b7vxollsmotjy" path="res://scripts/cafe_pause_menu.gd" id="8_hikh6"]
[ext_resource type="Texture2D" uid="uid://b3yexhfqtukr" path="res://assets/sprites/PauseTitleCard.png" id="9_kajt4"]
[ext_resource type="FontFile" uid="uid://baejtw4fvb0a4" path="res://assets/PixelatedEleganceRegular-ovyAA.ttf" id="10_egb7m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kog1c"]
texture = ExtResource("1_0euih")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ngef"]
texture = ExtResource("2_e5pj7")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -8, 8, -8, 8, 8, -5.333333, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.333333, -8, -8, -8, -8, 8, 5.333333, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -8, 8, -8, 8, 8, -5.333333, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.333333, -8, -8, -8, -8, 8, 5.333333, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -8, 8, -8, 8, 8, -5.333333, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.333333, -8, -8, -8, -8, 8, 5.333333, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -8, 8, -8, 8, 8, -5.333333, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.333333, -8, -8, -8, -8, 8, 5.333333, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -5.333333, 5.333334, -5.333333, 5.333334, 2.666667, -5.333333, 2.666667)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -4, -8, -4)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -4, -8, -4)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.333333, -5.333333, 5.333334, -5.333333, 5.333334, 2.666667, -5.333333, 2.666667)
6:5/0 = 0
7:5/0 = 0
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 8, 8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -5.333333, -8, -5.333333, 0, 8, 0)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.333333, -8, 5.333333, 0, -8, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_igkyh"]
texture = ExtResource("3_au171")
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ca0kj"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_kog1c")
sources/1 = SubResource("TileSetAtlasSource_0ngef")
sources/2 = SubResource("TileSetAtlasSource_igkyh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kog1c"]
size = Vector2(16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kog1c"]
atlas = ExtResource("4_au171")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ngef"]
atlas = ExtResource("4_au171")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igkyh"]
atlas = ExtResource("4_au171")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca0kj"]
atlas = ExtResource("4_au171")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hikh6"]
atlas = ExtResource("4_au171")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kajt4"]
atlas = ExtResource("4_au171")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_egb7m"]
atlas = ExtResource("4_au171")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0euih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kog1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ngef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igkyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hikh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kajt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egb7m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d8twx"]
atlas = ExtResource("4_e5pj7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk8g6"]
atlas = ExtResource("4_e5pj7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt17o"]
atlas = ExtResource("4_e5pj7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ov3u"]
atlas = ExtResource("4_e5pj7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjv5j"]
atlas = ExtResource("4_e5pj7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uxex"]
atlas = ExtResource("4_e5pj7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlegr"]
atlas = ExtResource("4_e5pj7")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4448r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8twx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk8g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt17o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ov3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjv5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uxex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlegr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8twx"]
bg_color = Color(0.4392157, 0.6039216, 0.8156863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk8g6"]
bg_color = Color(0.3019608, 0.42745098, 0.9529412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gt17o"]
bg_color = Color(0.6, 0.8509804, 0.91764706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ov3u"]
bg_color = Color(0.6, 0.8509804, 0.91764706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CatCafeShop" type="Node2D"]
script = ExtResource("1_0ngef")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -134.0
offset_top = -180.0
offset_right = 327.0
offset_bottom = 168.0
color = Color(0.1882353, 0.12941177, 0.1764706, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAQAAAAFAAIAAAAAAAUAAAAFAAEAAAAAAAYAAAAFAAIAAAAAAAcAAAAFAAMAAAAAAAgAAAAFAAQAAAAAAAkAAAAFAAUAAAABAAkAAAAGAAUAAAACAAkAAAAHAAUAAAADAAkAAAAIAAUAAAAEAAkAAAAHAAUAAAAFAAkAAAAIAAUAAAAGAAkAAAAGAAUAAAAHAAkAAAAHAAUAAAAIAAkAAAAIAAUAAAAJAAkAAAAHAAUAAAAKAAkAAAAIAAUAAAALAAkAAAAJAAUAAAALAAUAAAAJAAEAAAALAAYAAAAJAAIAAAALAAcAAAAJAAMAAAALAAgAAAAJAAQAAAALAAQAAAAJAAIAAAABAAQAAAAGAAQAAAACAAQAAAAHAAQAAAADAAQAAAAGAAQAAAAEAAQAAAAGAAQAAAAFAAQAAAAHAAQAAAAGAAQAAAAIAAQAAAAHAAQAAAAGAAQAAAAIAAQAAAAHAAQAAAAJAAQAAAAIAAQAAAAKAAQAAAAIAAQAAAABAAUAAAAGAAMAAAABAAYAAAAGAAQAAAACAAUAAAAHAAMAAAACAAYAAAAHAAQAAAADAAUAAAAIAAMAAAADAAYAAAAIAAQAAAAEAAUAAAAGAAMAAAAEAAYAAAAGAAQAAAAFAAUAAAAHAAMAAAAFAAYAAAAHAAQAAAAGAAUAAAAIAAMAAAAGAAYAAAAIAAQAAAAIAAUAAAAHAAMAAAAIAAYAAAAHAAQAAAAJAAUAAAAIAAMAAAAJAAYAAAAIAAQAAAAKAAUAAAAIAAMAAAAKAAYAAAAIAAQAAAAHAAUAAAAGAAMAAAAHAAYAAAAGAAQAAAAIAAcAAAAGAAMAAAAIAAgAAAAGAAQAAAAJAAcAAAAHAAMAAAAJAAgAAAAHAAQAAAAKAAcAAAAIAAMAAAAKAAgAAAAIAAQAAAAGAAcAAAAHAAMAAAAGAAgAAAAHAAQAAAAHAAcAAAAIAAMAAAAHAAgAAAAIAAQAAAABAAcAAAAGAAMAAAACAAcAAAAGAAMAAAADAAcAAAAHAAMAAAAEAAcAAAAIAAMAAAADAAgAAAAHAAQAAAAEAAgAAAAIAAQAAAAFAAcAAAAGAAMAAAAFAAgAAAAGAAQAAAABAAgAAAAGAAQAAAACAAgAAAAGAAQAAAAAAAAAAAAFAAIAAAAAAAEAAAAFAAMAAAABAAAAAAAGAAEAAAABAAEAAAAGAAIAAAACAAAAAAAHAAEAAAACAAEAAAAHAAIAAAADAAAAAAAHAAEAAAADAAEAAAAHAAIAAAAEAAAAAAAHAAEAAAAEAAEAAAAHAAIAAAAFAAAAAAAHAAEAAAAFAAEAAAAHAAIAAAAGAAAAAAAHAAEAAAAGAAEAAAAHAAIAAAAHAAAAAAAHAAEAAAAHAAEAAAAHAAIAAAAIAAAAAAAHAAEAAAAIAAEAAAAHAAIAAAAJAAAAAAAHAAEAAAAJAAEAAAAHAAIAAAAKAAAAAAAIAAEAAAAKAAEAAAAIAAIAAAALAAAAAAAJAAIAAAALAAEAAAAJAAMAAAAAAP7/AAAFAAAAAAAAAP//AAAFAAEAAAABAP7/AAAGAAAAAAABAP//AAAGAAEAAAACAP7/AAAHAAAAAAACAP//AAAHAAEAAAADAP7/AAAGAAAAAAADAP//AAAIAAEAAAAEAP7/AAAHAAAAAAAEAP//AAAGAAEAAAAFAP7/AAAIAAAAAAAFAP//AAAHAAEAAAAGAP7/AAAGAAAAAAAGAP//AAAIAAEAAAAHAP7/AAAHAAAAAAAHAP//AAAGAAEAAAAIAP7/AAAIAAAAAAAIAP//AAAGAAEAAAAJAP7/AAAGAAAAAAAJAP//AAAHAAEAAAAKAP7/AAAHAAAAAAAKAP//AAAIAAEAAAALAP7/AAAJAAAAAAALAP//AAAJAAEAAAAAAAIAAAAFAAQAAAAAAAMAAAAFAAEAAAABAAIAAAAGAAQAAAABAAMAAAAGAAMAAAACAAIAAAAGAAQAAAACAAMAAAAHAAMAAAADAAIAAAAHAAQAAAADAAMAAAAIAAQAAAAEAAIAAAAIAAQAAAAEAAMAAAAGAAMAAAAFAAIAAAAGAAQAAAAFAAMAAAAHAAMAAAAGAAIAAAAHAAQAAAAGAAMAAAAIAAMAAAAHAAIAAAAIAAQAAAAHAAMAAAAGAAMAAAAIAAIAAAAGAAQAAAAIAAMAAAAHAAMAAAAJAAIAAAAHAAQAAAAJAAMAAAAIAAMAAAAKAAIAAAAIAAQAAAAKAAMAAAAIAAMAAAALAAIAAAAJAAQAAAALAAMAAAAJAAEAAAA=")
tile_set = SubResource("TileSet_ca0kj")

[node name="TileMapLayer5" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAP//AQAJAAEAAAABAAAAAQAJAAIAAAACAP//AQAKAAEAAAACAAAAAQAKAAIAAAAJAP//AQAJAAIAACAJAAAAAQAJAAEAACAKAP//AQAKAAIAACAKAAAAAQAKAAEAACAFAP//AQAHAAEAAAAGAP//AQAIAAEAAAAFAAAAAQAHAAIAAAAGAAAAAQAIAAIAAAADAAQAAQAGAAgAAAAEAAMAAQAGAAcAAAAEAAQAAQAGAAgAAAAFAAMAAQAHAAcAAAAFAAQAAQAHAAgAAAAGAAMAAQAIAAcAAAAGAAQAAQAIAAgAAAAHAAEAAQABAAEAAAAHAAIAAQABAAIAAAAIAAEAAQACAAEAAAAIAAIAAQACAAIAAAABAAMAAQABAAQAAAABAAQAAQABAAUAAAACAAMAAQACAAQAAAACAAQAAQACAAUAAAAJAAIAAQAFAAUAAAADAAcAAQADAAUAAAADAAMAAQAGAAcAAAALAAgAAAAEAAQAAAALAAcAAAAEAAMAAAAEAAcAAQAEAAUAAAA=")
tile_set = SubResource("TileSet_ca0kj")

[node name="TileMapLayer4" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAKAAgAAQAGAAQAAGAKAAcAAQAHAAQAAGA=")
tile_set = SubResource("TileSet_ca0kj")

[node name="TopDownPlayer" parent="." instance=ExtResource("6_kog1c")]
position = Vector2(125, 124)
collision_mask = 130

[node name="Door" type="Area2D" parent="."]
collision_layer = 128
script = ExtResource("7_0ngef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(168, 128)
shape = SubResource("RectangleShape2D_kog1c")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(72, 56)
sprite_frames = SubResource("SpriteFrames_0euih")
autoplay = "default"
frame_progress = 0.6365702

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAP//AQAJAAEAAAABAAAAAQAJAAIAAAACAP//AQAKAAEAAAACAAAAAQAKAAIAAAAJAP//AQAJAAIAACAJAAAAAQAJAAEAACAKAP//AQAKAAIAACAKAAAAAQAKAAEAACAFAP//AQAHAAEAAAAGAP//AQAIAAEAAAAFAAAAAQAHAAIAAAAGAAAAAQAIAAIAAAAEAAMAAQAGAAcAAAAFAAMAAQAHAAcAAAAHAAEAAQABAAEAAAAIAAEAAQACAAEAAAABAAMAAQABAAQAAAACAAMAAQACAAQAAAAEAAYAAQAEAAQAAAADAAMAAQAGAAcAAAALAAgAAAAEAAQAAAALAAcAAAAEAAMAAAADAAYAAQADAAQAAAA=")
tile_set = SubResource("TileSet_ca0kj")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAEAAQAGAAUAAAAHAAEAAQAIAAQAAAAEAAQAAQAHAAUAAAA=")
tile_set = SubResource("TileSet_ca0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(40, 98)
sprite_frames = SubResource("SpriteFrames_4448r")
autoplay = "default"
frame_progress = 0.15698636

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(104.00001, 51)
scale = Vector2(0.78571427, 0.8333333)
texture = ExtResource("3_au171")
region_enabled = true
region_rect = Rect2(17, 19, 14, 11)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(38, 58)
texture = ExtResource("3_au171")
region_enabled = true
region_rect = Rect2(1, 2, 14, 12)

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(64, 98)
texture = ExtResource("3_au171")
region_enabled = true
region_rect = Rect2(17, 2, 14, 12)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(57, 103)
texture = ExtResource("3_au171")
region_enabled = true
region_rect = Rect2(1, 18, 14, 12)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(97, -1)

[node name="CafePauseMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("8_hikh6")

[node name="ColorRect" type="ColorRect" parent="CafePauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.15294118)

[node name="MarginContainer" type="MarginContainer" parent="CafePauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="CafePauseMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="CafePauseMenu/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(172.3, 66.73)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_kajt4")
expand_mode = 2
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CafePauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CafePauseMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 8
alignment = 1

[node name="ResumeButton" type="Button" parent="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 22)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("10_egb7m")
theme_override_styles/normal = SubResource("StyleBoxFlat_d8twx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yk8g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_gt17o")
theme_override_styles/focus = SubResource("StyleBoxFlat_4ov3u")
text = "Resume"

[node name="RestartButton" type="Button" parent="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 22)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("10_egb7m")
theme_override_styles/normal = SubResource("StyleBoxFlat_d8twx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yk8g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_gt17o")
theme_override_styles/focus = SubResource("StyleBoxFlat_4ov3u")
text = "Restart"

[node name="ReturnButton" type="Button" parent="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(127.3, 40.56)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("10_egb7m")
theme_override_styles/normal = SubResource("StyleBoxFlat_d8twx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yk8g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_gt17o")
theme_override_styles/focus = SubResource("StyleBoxFlat_4ov3u")
text = "Return to
Main Menu"

[connection signal="button_up" from="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer/ResumeButton" to="CafePauseMenu" method="on_resume_up"]
[connection signal="button_up" from="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer/RestartButton" to="CafePauseMenu" method="on_restart_up"]
[connection signal="button_up" from="CafePauseMenu/MarginContainer/HBoxContainer/VBoxContainer/ReturnButton" to="CafePauseMenu" method="on_return_up"]
